Bug 95612 - Page header numbering wrong in print preview using calc
Summary: Page header numbering wrong in print preview using calc
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.3.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0 target:5.3.2 target:5.2.7
Keywords:
: 95206 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-05 17:43 UTC by AndrewB
Modified: 2017-03-13 10:09 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
As requested (34.38 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-11-05 21:59 UTC, AndrewB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description AndrewB 2015-11-05 17:43:41 UTC
This is repeatedly verifiable: LO 4.4.3.2 Spreadsheet with 3 sheets (i.e. > 1). Page header includes fields, i.e. Page 1 of 99. Sheets have different number of pages per sheet but this does not appear relevant.

Sheet 1 previews correctly e.g. 'Page 1 of 4'. All subsequent sheets preview incorrectly e.g. 'Page 0 of n' where n is the total number of pages in the given sheet. It does not matter which order the sheets are arranged in the file. When the first sheet is deleted, the first promoted sheet previews correctly.
Minor but off-putting. Seems to print correctly however.
Comment 1 Cor Nouws 2015-11-05 19:58:59 UTC
Hi Andrew,

Can you please attach a test file, showing the issue?
thanks a lot,
Cor
Comment 2 AndrewB 2015-11-05 21:59:23 UTC
Created attachment 120312 [details]
As requested
Comment 3 m.a.riosv 2015-11-07 00:38:12 UTC
I think there was already a report about this matter but I can't find it.

When no first page number is set up in Page Style - Sheet properties, Print-preview takes 0 as default but Pint takes 1 as default.

Seems the bug is that both must use 1 as default, how excel also does remembering a comment about this matter.
Comment 4 QA Administrators 2016-11-08 11:56:33 UTC Comment hidden (obsolete)
Comment 5 AndrewB 2016-11-22 10:12:17 UTC
Linux Mint 18 64bit kernel 4.4.0-21-generic i5-4690 15.4 Gb ram

This bug remains in Version: 5.1.6.2 
Build ID: 07ac168c60a517dba0f0d7bc7540f5afa45f0909

I did upgrade to 5.2 but reverted back to the repository version due to very confusing colour shadowing in mouse-over-menus (typically including the 3 lower menu options) and blank text in many tools>options screens until the associated check box was clicked.
Comment 6 Commit Notification 2017-03-03 16:15:47 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c07ac0d92ad830762906586164bab466a0f05531

tdf#95612: Print preview: page numbering starts with 1 (not 0)

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2017-03-10 15:18:49 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=acd58ceaa1d792d0a16c270c56ff727321fb2aac&h=libreoffice-5-3

tdf#95612: Print preview: page numbering starts with 1 (not 0)

It will be available in 5.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Katarina Behrens (Inactive) 2017-03-10 17:27:27 UTC
I tested the fix w/ the test document and different combinations of pages to print -- pages 1,2,3 selected one by one, all pages selected with Ctrl-Click or any 2 out of 3 pages selected and "print selected sheets" print setting, as well as w/ "print all sheets" print setting -- and in all cases the print preview had Page N of M right. No more zeroes 

Since nobody else protested, I'm closing this as fixed
Comment 9 m.a.riosv 2017-03-10 18:45:57 UTC
Hi @Katarina, there are no master builds for windows since 2017-03-02, to test your patch, I'll do when a master for windows is available.
Comment 10 m.a.riosv 2017-03-12 01:58:54 UTC
*** Bug 95206 has been marked as a duplicate of this bug. ***
Comment 11 m.a.riosv 2017-03-12 02:01:54 UTC
Not new dailies for master but,
Verified with a daily for 5.3
Version: 5.3.2.0.0+
Build ID: acd58ceaa1d792d0a16c270c56ff727321fb2aac
CPU Threads: 4; OS Version: Windows 6.2; UI Render: GL; Layout Engine: new; 
TinderBox: Win-x86@62-merge-TDF, Branch:libreoffice-5-3, Time: 2017-03-10_19:46:34
Locale: es-ES (es_ES); Calc: group
Comment 12 Commit Notification 2017-03-12 23:41:48 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b95ac4bac7ae43f3f3d60738f739a75f8f8e9b6e&h=libreoffice-5-2

tdf#95612: Print preview: page numbering starts with 1 (not 0)

It will be available in 5.2.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Katarina Behrens (Inactive) 2017-03-13 10:09:50 UTC
@m.a.riosv: Gracias, muy apreciado :o)