tdf#95612: Print preview: page numbering starts with 1 (not 0)

unless otherwise specified. It was okay for 1st page & broken
everywhere else. Possibly resolves tdf#95206 as well ...

Change-Id: Ie69f770a28dd69f90d4f04ad4fa9e701fa2d56e2
Reviewed-on: https://gerrit.libreoffice.org/34759
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit c07ac0d92ad830762906586164bab466a0f05531)